[project]
name = "content-claw"
version = "0.1.0"
description = "Content generation engine for OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pymupdf>=1.24",
    "readabilipy>=0.2",
    "playwright>=1.49",
    "openai>=1.50",
]

[project.scripts]
extract = "scripts.extractors.extract:main"
